<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/add_instrument"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_instrument"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/add_monster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_monster"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/add_halo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_halo"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/add_feature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_feature"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/add_decent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_decent"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</LinearLayout>